# test

./: .gitignore
c++/: Makefile  abs.cc  blas_template.cc  const_const.cc  const_scalar.cc  container_assign.cc  deprecated.cc  deprecated2.cc  enable_if.cc  enum2str_operator.cc  enum2str_to_string.cc  enum2str_to_string_template.cc  enum_init.cc  exit_code.cc  fft-wrappers.cc  functional.cc  get_type_name.hh  if-const.cc  ilp64.cc  instantiate.cc  instantiate.hh  instantiate_impl.cc  iterator_scalar.cc  mpi_type.cc  namespace_adl.cc  namespace_collision.cc  nextafter.cc  non_copyable.cc  optional_named_args.cc  optional_named_args.py  opts.cc  pow-vs-sqrt.cc  queue.cc  scan_range.cc  shared_pointer.cc  signed_int.cc  signum.cc  strlcpy.cc  template.cc  to_string_namespace.cc  (+2 more)
c++/hg-id/: Makefile  Makefile-short  app.cc  test.cc
clang-format/: Access.cc  ArgsNextLine.cc  Assignments.cc  Braces-long.cc  Braces-medium.cc  Braces.cc  Constructor.cc  Declarations.cc  EscapedNewlines.cc  Makefile  OpenBracket.cc  Operands.cc  Params.cc  ShortCase.cc  ShortFunc.cc  ShortIf.cc  TrailingComments.cc
cmake/blas/: CMakeLists.txt  test_gemm.cc
cmake/commandline/: CMakeLists.txt  main.cc  output.txt  run.sh
cmake/conditonal/: CMakeLists.txt
cmake/function/: CMakeLists.txt
cmake/list/: CMakeLists.txt
cmake/loops/: CMakeLists.txt
cmake/message/: CMakeLists.txt
cmake/string/: CMakeLists.txt
cmake/submodule/foo/: CMakeLists.txt  fooConfig.cmake.in
cmake/submodule/foo/include/: foo.hh
cmake/submodule/foo/src/: foo.cc
cmake/truth/: CMakeLists.txt
cmake/try/: CMakeLists.txt  foo.cc  simple.cc  test.cc
cuda/: Makefile  cuda-properties.cc  cuda-version.cc  thrust.cc  trace.cu
lapack/: Makefile  lamch.cc  lamchf.f90  make.inc.openblas
latex/: spacing.tex
latex/latexmk/: Makefile  bar.tex  bar2.tex  foo.tex  foo1.tex  foo2.tex
makefile/functions/: Makefile
makefile/hashdep/: Makefile  README  hashdeps.mk
makefile/hashdep/src/: a.cc  a.hh  b.cc  b.hh
makefile/hashdep/test/: tester.cc
makefile/hip/: Makefile
makefile/options/: Makefile
makefile/out-of-place/: Makefile  make.inc-clang  make.inc-gnu  make.inc-gnu-in-place
makefile/out-of-place/blaspp/: Makefile
makefile/out-of-place/blaspp/include/: blas.hh
makefile/out-of-place/blaspp/src/: gemm.cc  hemm.cc  her2k.cc  herk.cc  trmm.cc  trsm.cc
makefile/out-of-place/blaspp/test/: test.cc
makefile/out-of-place/include/: slate.hh
makefile/out-of-place/src/: gemm.cc  hemm.cc  her2k.cc  herk.cc  trmm.cc  trsm.cc
makefile/out-of-place/test/: test.cc
makefile/recursive/: Makefile  make.inc
makefile/recursive/blaspp/: Makefile
makefile/static-link/: Makefile
makefile/static-link/src/: foo.cc
makefile/static-link/test/: tester.cc
markdown/: code-blocks.md  slate-style.md
mpi/: Makefile  allgather.cc  allgatherv.cc  allreduce.cc  bcast.cc  gather.cc  gatherv.cc  hello.cc  init.cc  isend.cc  local_rank.cc  processor_name.cc  random.cc  reduce.cc  scatter.cc  scatterv.cc  send-cuda.cc  send.cc  sendrecv.cc  time.cc  time2.cc  util.hh  version.cc
openmp/: Makefile  hello.cc  private.cc
python/: nested.py
rsync/link-dest/: run.sh
rsync/select-subdirs/: Makefile  filter2.txt  filter3.txt
sh/: export_var.sh  export_var_sub.sh  trace.sh
uncrustify/: annotated.cfg  annotated.py  base.cfg
